--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,17 @@ Authors@R:
       person(given = "RStudio",
              role = c("cph", "fnd")))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Imports: 
+    cli,
+    curl,
+    ellipsis,
+    glue,
+    httr,
+    lifecycle,
+    magrittr,
+    rlang,
+    withr
