--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,httr2_response)
 export("%>%")
 export(req)
 export(req_fetch)
+export(req_stream)
 export(resp_body_json)
 export(resp_body_raw)
 export(resp_body_string)
