--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,10 @@ export("%>%")
 export(req)
 export(req_fetch)
 export(req_stream)
+export(req_url)
+export(req_url_path)
+export(req_url_path_append)
+export(req_url_query)
 export(resp_body_json)
 export(resp_body_raw)
 export(resp_body_string)
