--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,httr2_response)
 export("%>%")
 export(req)
 export(req_fetch)
+export(req_method)
 export(req_stream)
 export(req_url)
 export(req_url_path)
