--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(req)
 export(req_fetch)
 export(req_method)
 export(req_stream)
+export(req_template)
 export(req_url)
 export(req_url_path)
 export(req_url_path_append)
