--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,3 +30,5 @@ Suggests:
     xml2,
     covr
 Config/testthat/edition: 3
+URL: https://httr2.r-lib.org, https://github.com/r-lib/httr2
+BugReports: https://github.com/r-lib/httr2/issues
