Export, document, and test request bodies
Revealed that my understanding of default methods (from httr) was incorrect.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,12 @@ S3method(print,httr2_request)
 S3method(print,httr2_response)
 export("%>%")
 export(req)
+export(req_body_file)
+export(req_body_form)
+export(req_body_json)
+export(req_body_multipart)
+export(req_body_none)
+export(req_body_raw)
 export(req_fetch)
 export(req_method)
 export(req_stream)
