Implement req_dry_run()
And use in req_body examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(req_body_json)
 export(req_body_multipart)
 export(req_body_none)
 export(req_body_raw)
+export(req_dry_run)
 export(req_fetch)
 export(req_method)
 export(req_stream)
