--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Suggests:
     testthat (>= 3.0.0),
     jsonlite,
     xml2,
-    covr
+    covr,
+    httpuv
 Config/testthat/edition: 3
 URL: https://httr2.r-lib.org, https://github.com/r-lib/httr2
 BugReports: https://github.com/r-lib/httr2/issues
