--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(req_body_none)
 export(req_body_raw)
 export(req_dry_run)
 export(req_fetch)
+export(req_headers)
 export(req_method)
 export(req_stream)
 export(req_template)
