--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,httr2_request)
 S3method(print,httr2_response)
 export("%>%")
 export(req)
+export(req_authenticate)
 export(req_body_file)
 export(req_body_form)
 export(req_body_json)
@@ -14,12 +15,16 @@ export(req_dry_run)
 export(req_fetch)
 export(req_headers)
 export(req_method)
+export(req_options)
 export(req_stream)
 export(req_template)
+export(req_timeout)
 export(req_url)
 export(req_url_path)
 export(req_url_path_append)
 export(req_url_query)
+export(req_user_agent)
+export(req_verbose)
 export(resp_body_json)
 export(resp_body_raw)
 export(resp_body_string)
