Document/export resp_headers()
And tidy up rest of file, removing unused functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,9 @@ export(resp_body_json)
 export(resp_body_raw)
 export(resp_body_string)
 export(resp_body_xml)
+export(resp_header)
+export(resp_header_exists)
+export(resp_headers)
 import(rlang)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
