Export/document status related functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,9 @@ export(resp_body_xml)
 export(resp_header)
 export(resp_header_exists)
 export(resp_headers)
+export(resp_is_error)
+export(resp_status)
+export(resp_status_desc)
 import(rlang)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
