--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(resp_body_json)
 export(resp_body_raw)
 export(resp_body_string)
 export(resp_body_xml)
+export(resp_check_status)
 export(resp_header)
 export(resp_header_exists)
 export(resp_headers)
