--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,10 @@ export(req_fetch)
 export(req_headers)
 export(req_method)
 export(req_options)
+export(req_retry)
 export(req_stream)
 export(req_template)
+export(req_throttle)
 export(req_timeout)
 export(req_url)
 export(req_url_path)
