Add custom error handling via callbacks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(req_body_multipart)
 export(req_body_none)
 export(req_body_raw)
 export(req_dry_run)
+export(req_error)
 export(req_fetch)
 export(req_headers)
 export(req_method)
