Use webfakes for testing endpoint

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Suggests:
     jsonlite,
     rmarkdown,
     testthat (>= 3.0.0),
-    xml2
+    xml2,
+    webfakes
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
