Test body extraction and add new HTML method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(req_url_path_append)
 export(req_url_query)
 export(req_user_agent)
 export(req_verbose)
+export(resp_body_html)
 export(resp_body_json)
 export(resp_body_raw)
 export(resp_body_string)
