Document header helpers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,9 @@ export(resp_body_raw)
 export(resp_body_string)
 export(resp_body_xml)
 export(resp_check_status)
+export(resp_content_type)
+export(resp_date)
+export(resp_encoding)
 export(resp_header)
 export(resp_header_exists)
 export(resp_headers)
