--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(resp_header)
 export(resp_header_exists)
 export(resp_headers)
 export(resp_is_error)
+export(resp_retry_after)
 export(resp_status)
 export(resp_status_desc)
 import(rlang)
