Minor auth fixes
* req_authenticate() -> req_auth_basic()
* new req_auth_bearer_token()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,8 @@ S3method(print,httr2_request)
 S3method(print,httr2_response)
 export("%>%")
 export(req)
-export(req_authenticate)
+export(req_auth_basic)
+export(req_auth_bearer_token)
 export(req_body_file)
 export(req_body_form)
 export(req_body_json)
