Document oauth_flow_auth_code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,10 @@ S3method(print,httr2_oauth_client)
 S3method(print,httr2_request)
 S3method(print,httr2_response)
 export("%>%")
+export(oauth_flow_auth_code)
+export(oauth_flow_auth_code_listen)
+export(oauth_flow_auth_code_parse)
+export(oauth_flow_auth_code_url)
 export(req)
 export(req_auth_basic)
 export(req_auth_bearer_token)
