--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(oauth_flow_auth_code)
 export(oauth_flow_auth_code_listen)
 export(oauth_flow_auth_code_parse)
 export(oauth_flow_auth_code_url)
+export(oauth_flow_auth_pkce)
 export(req)
 export(req_auth_basic)
 export(req_auth_bearer_token)
