Basic docs for all OAuth flows

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,12 @@ export("%>%")
 export(oauth_flow_auth_code)
 export(oauth_flow_auth_code_listen)
 export(oauth_flow_auth_code_parse)
+export(oauth_flow_auth_code_pkce)
 export(oauth_flow_auth_code_url)
-export(oauth_flow_auth_pkce)
+export(oauth_flow_client_credentials)
+export(oauth_flow_device)
+export(oauth_flow_password)
+export(oauth_flow_refresh)
 export(req)
 export(req_auth_basic)
 export(req_auth_bearer_token)
