--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method(print,httr2_oauth_client)
 S3method(print,httr2_request)
 S3method(print,httr2_response)
 export("%>%")
+export(oauth_app)
+export(oauth_client)
 export(oauth_flow_auth_code)
 export(oauth_flow_auth_code_listen)
 export(oauth_flow_auth_code_parse)
@@ -27,6 +29,8 @@ export(req_error)
 export(req_fetch)
 export(req_headers)
 export(req_method)
+export(req_oauth)
+export(req_oauth_refresh)
 export(req_options)
 export(req_retry)
 export(req_stream)
