Sketch out req_oauth_auth_code
Some caching tweaks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(req_fetch)
 export(req_headers)
 export(req_method)
 export(req_oauth)
+export(req_oauth_auth_code)
 export(req_oauth_refresh)
 export(req_options)
 export(req_retry)
