--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(oauth_flow_client_credentials)
 export(oauth_flow_device)
 export(oauth_flow_password)
 export(oauth_flow_refresh)
+export(oauth_token)
 export(req)
 export(req_auth_basic)
 export(req_auth_bearer_token)
