Document and export renaming req_oauth_ functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,9 @@ export(req_headers)
 export(req_method)
 export(req_oauth)
 export(req_oauth_auth_code)
+export(req_oauth_client_credentials)
+export(req_oauth_device)
+export(req_oauth_password)
 export(req_oauth_refresh)
 export(req_options)
 export(req_retry)
