--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method(print,httr2_oauth_client)
 S3method(print,httr2_request)
 S3method(print,httr2_response)
 export("%>%")
+export(oauth_app)
+export(oauth_client)
 export(oauth_flow_auth_code)
 export(oauth_flow_auth_code_listen)
 export(oauth_flow_auth_code_parse)
@@ -13,6 +15,7 @@ export(oauth_flow_client_credentials)
 export(oauth_flow_device)
 export(oauth_flow_password)
 export(oauth_flow_refresh)
+export(oauth_token)
 export(req)
 export(req_auth_basic)
 export(req_auth_bearer_token)
@@ -27,6 +30,12 @@ export(req_error)
 export(req_fetch)
 export(req_headers)
 export(req_method)
+export(req_oauth)
+export(req_oauth_auth_code)
+export(req_oauth_client_credentials)
+export(req_oauth_device)
+export(req_oauth_password)
+export(req_oauth_refresh)
 export(req_options)
 export(req_retry)
 export(req_stream)
