--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,11 +1,9 @@
 url: https://httr2.r-lib.org
 
 reference:
-- title: Create a request and control its behaviour
+- title: Define a request
   contents:
   - req
-  - req_auth_basic
-  - req_auth_bearer_token
   - req_body_none
   - req_error
   - req_headers
@@ -18,7 +16,12 @@ reference:
   - req_user_agent
   - req_verbose
 
-- title: Perform a request
+- title: Authenticate a request
+  contents:
+  - starts_with("req_auth")
+  - starts_with("req_oauth")
+
+- title: Perform a request and get a response
   contents:
   - req_dry_run
   - req_fetch
@@ -29,5 +32,9 @@ reference:
   - starts_with("resp_")
 
 - title: OAuth flows
+  desc: >
+    These functions implement various OAuth flows, returning an access token.
+    Generally, you should not need to call them directly, instead using the
+    `req_oauth_*` helpers
   contents:
   - starts_with("oauth_")
