Basic secret management
Fixes #6

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,12 @@ export(resp_is_error)
 export(resp_retry_after)
 export(resp_status)
 export(resp_status_desc)
+export(secret_decrypt)
+export(secret_encrypt)
+export(secret_get_key)
+export(secret_make_key)
+export(secret_read_rds)
+export(secret_write_rds)
 import(rlang)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
