--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,6 @@ export(oauth_flow_device)
 export(oauth_flow_password)
 export(oauth_flow_refresh)
 export(oauth_token)
-export(req)
 export(req_auth_basic)
 export(req_auth_bearer_token)
 export(req_body_file)
@@ -48,6 +47,7 @@ export(req_url_path_append)
 export(req_url_query)
 export(req_user_agent)
 export(req_verbose)
+export(request)
 export(resp_body_html)
 export(resp_body_json)
 export(resp_body_raw)
