Document + export response

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ export(resp_is_error)
 export(resp_retry_after)
 export(resp_status)
 export(resp_status_desc)
+export(response)
 export(secret_decrypt)
 export(secret_encrypt)
 export(secret_get_key)
