--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method(print,httr2_oauth_client)
 S3method(print,httr2_request)
 S3method(print,httr2_response)
 export("%>%")
+export(last_request)
+export(last_response)
 export(oauth_app)
 export(oauth_client)
 export(oauth_flow_auth_code)
