--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -34,7 +34,9 @@ reference:
 
 - title: Miscellaenous helpers
   contents:
-    secrets
+  - secrets
+  - obfuscate
+
 
 - title: OAuth flows
   desc: >
