First pass at JWT implementations
* App auth now pluggable
* New base64_url_rand()
* jwt_claim_set() and jwt_sign_rs256()
* JWT OAuth flow

Fixes #29

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -37,11 +37,9 @@ reference:
   - secrets
   - obfuscate
 
-
 - title: OAuth flows
   desc: >
-    These functions implement various OAuth flows, returning an access token.
-    Generally, you should not need to call them directly, instead using the
-    `req_oauth_*` helpers
+    These functions implement the low-level components of OAuth.
   contents:
   - starts_with("oauth_")
+  - starts_with("jwt_")
