--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -16,6 +16,7 @@ jobs:
     env:
       RSPM: https://packagemanager.rstudio.com/cran/__linux__/bionic/latest
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      HTTR2_KEY: ${{ secrets.HTTR2_KEY }}
 
     steps:
       - uses: actions/checkout@v2
