--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,15 @@ S3method(print,httr2_obfuscated)
 S3method(print,httr2_request)
 S3method(print,httr2_response)
 export("%>%")
+export(jwt_claim_set)
+export(jwt_sign_rs256)
 export(last_request)
 export(last_response)
 export(oauth_app)
 export(oauth_client)
+export(oauth_client_req_auth_body)
+export(oauth_client_req_auth_header)
+export(oauth_client_req_auth_jwt_rs256)
 export(oauth_flow_auth_code)
 export(oauth_flow_auth_code_listen)
 export(oauth_flow_auth_code_parse)
@@ -17,6 +22,7 @@ export(oauth_flow_auth_code_pkce)
 export(oauth_flow_auth_code_url)
 export(oauth_flow_client_credentials)
 export(oauth_flow_device)
+export(oauth_flow_jwt)
 export(oauth_flow_password)
 export(oauth_flow_refresh)
 export(oauth_token)
@@ -39,6 +45,7 @@ export(req_oauth)
 export(req_oauth_auth_code)
 export(req_oauth_client_credentials)
 export(req_oauth_device)
+export(req_oauth_jwt)
 export(req_oauth_password)
 export(req_oauth_refresh)
 export(req_options)
@@ -73,7 +80,6 @@ export(resp_status_desc)
 export(response)
 export(secret_decrypt)
 export(secret_encrypt)
-export(secret_get_key)
 export(secret_make_key)
 export(secret_read_rds)
 export(secret_write_rds)
