Use Jose to generate JWTs
Fixes #34

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,15 +6,16 @@ S3method(print,httr2_obfuscated)
 S3method(print,httr2_request)
 S3method(print,httr2_response)
 export("%>%")
-export(jwt_claim_set)
-export(jwt_sign_rs256)
+export(jwt_claim)
+export(jwt_encode_hmac)
+export(jwt_encode_sig)
 export(last_request)
 export(last_response)
 export(oauth_app)
 export(oauth_client)
 export(oauth_client_req_auth_body)
 export(oauth_client_req_auth_header)
-export(oauth_client_req_auth_jwt_rs256)
+export(oauth_client_req_auth_jwt_sig)
 export(oauth_flow_auth_code)
 export(oauth_flow_auth_code_listen)
 export(oauth_flow_auth_code_parse)
