Add verbosity argument to req_fetch()
Controlled by option httr2_verbosity, which can be locally set by with_verbosity()

Fixes #25

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,7 @@ export(secret_encrypt)
 export(secret_make_key)
 export(secret_read_rds)
 export(secret_write_rds)
+export(with_verbosity)
 import(rlang)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
