--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(req_body_json)
 export(req_body_multipart)
 export(req_body_none)
 export(req_body_raw)
+export(req_cache)
 export(req_dry_run)
 export(req_error)
 export(req_fetch)
