Implement parallel fetch
Fixes #18

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(jwt_encode_hmac)
 export(jwt_encode_sig)
 export(last_request)
 export(last_response)
+export(multi_req_fetch)
 export(oauth_app)
 export(oauth_client)
 export(oauth_client_req_auth_body)
