--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,7 @@ Suggests:
     httpuv,
     jose,
     jsonlite,
+    pkgdown,
     rmarkdown,
     testthat (>= 3.0.0),
     webfakes,
@@ -40,3 +41,5 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Remotes:  
+    r-lib/pkgdown
