--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ export(resp_header)
 export(resp_header_exists)
 export(resp_headers)
 export(resp_is_error)
+export(resp_raw)
 export(resp_retry_after)
 export(resp_status)
 export(resp_status_desc)
