--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(print,httr2_oauth_client)
 S3method(print,httr2_obfuscated)
 S3method(print,httr2_request)
 S3method(print,httr2_response)
+S3method(print,httr2_token)
 export("%>%")
 export(jwt_claim)
 export(jwt_encode_hmac)
