--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ export(resp_status_desc)
 export(response)
 export(secret_decrypt)
 export(secret_encrypt)
+export(secret_has_key)
 export(secret_make_key)
 export(secret_read_rds)
 export(secret_write_rds)
