oauth_jwt -> oauth_bearer_jwt
And improve docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,9 +26,9 @@ export(oauth_flow_auth_code_listen)
 export(oauth_flow_auth_code_parse)
 export(oauth_flow_auth_code_pkce)
 export(oauth_flow_auth_code_url)
+export(oauth_flow_bearer_jwt)
 export(oauth_flow_client_credentials)
 export(oauth_flow_device)
-export(oauth_flow_jwt)
 export(oauth_flow_password)
 export(oauth_flow_refresh)
 export(oauth_token)
@@ -49,9 +49,9 @@ export(req_headers)
 export(req_method)
 export(req_oauth)
 export(req_oauth_auth_code)
+export(req_oauth_bearer_jwt)
 export(req_oauth_client_credentials)
 export(req_oauth_device)
-export(req_oauth_jwt)
 export(req_oauth_password)
 export(req_oauth_refresh)
 export(req_options)
