--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,7 @@ export(jwt_encode_hmac)
 export(jwt_encode_sig)
 export(last_request)
 export(last_response)
-export(multi_req_fetch)
+export(multi_req_perform)
 export(oauth_client)
 export(oauth_client_req_auth_body)
 export(oauth_client_req_auth_header)
@@ -44,7 +44,6 @@ export(req_body_raw)
 export(req_cache)
 export(req_dry_run)
 export(req_error)
-export(req_fetch)
 export(req_headers)
 export(req_method)
 export(req_oauth)
@@ -55,6 +54,7 @@ export(req_oauth_device)
 export(req_oauth_password)
 export(req_oauth_refresh)
 export(req_options)
+export(req_perform)
 export(req_retry)
 export(req_stream)
 export(req_template)
