Implement resp_link_url()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ export(resp_header)
 export(resp_header_exists)
 export(resp_headers)
 export(resp_is_error)
+export(resp_link_url)
 export(resp_raw)
 export(resp_retry_after)
 export(resp_status)
