--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(print,httr2_obfuscated)
 S3method(print,httr2_request)
 S3method(print,httr2_response)
 S3method(print,httr2_token)
+S3method(print,httr2_url)
 export("%>%")
 export(jwt_claim)
 export(jwt_encode_hmac)
@@ -92,6 +93,8 @@ export(secret_has_key)
 export(secret_make_key)
 export(secret_read_rds)
 export(secret_write_rds)
+export(url_build)
+export(url_parse)
 export(with_verbosity)
 import(rlang)
 importFrom(glue,glue)
