Update pkgdown reference index

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -8,7 +8,7 @@ reference:
   subtitle: Create and modify
   contents:
   - request
-  - req_body_none
+  - req_body
   - req_headers
   - req_method
   - req_template
