Document and export

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ S3method(print,httr2_response)
 S3method(print,httr2_token)
 S3method(print,httr2_url)
 export("%>%")
+export(curl_help)
+export(curl_translate)
 export(jwt_claim)
 export(jwt_encode_hmac)
 export(jwt_encode_sig)
