--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method("$",httr2_headers)
 S3method("[",httr2_headers)
 S3method("[[",httr2_headers)
 S3method(format,httr2_obfuscated)
+S3method(print,httr2_cmd)
 S3method(print,httr2_headers)
 S3method(print,httr2_oauth_client)
 S3method(print,httr2_obfuscated)
@@ -12,6 +13,8 @@ S3method(print,httr2_response)
 S3method(print,httr2_token)
 S3method(print,httr2_url)
 export("%>%")
+export(curl_help)
+export(curl_translate)
 export(jwt_claim)
 export(jwt_encode_hmac)
 export(jwt_encode_sig)
