--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -16,6 +16,13 @@ reference:
   - req_url
   - req_user_agent
 
+- subtitle: Debugging
+  contents:
+  - last_request
+  - req_dry_run
+  - req_verbose
+  - with_verbosity
+
 - subtitle: Authentication
   contents:
   - starts_with("req_auth")
@@ -23,11 +30,9 @@ reference:
 
 - title: Perform a request and get a response
   contents:
-  - req_dry_run
   - req_perform
   - req_stream
   - multi_req_perform
-  - last_request
 
 - subtitle: Control the process
   desc: >
@@ -38,7 +43,6 @@ reference:
   - req_error
   - req_throttle
   - req_retry
-  - req_verbose
 
 - title: Handle the response
   contents:
@@ -50,7 +54,6 @@ reference:
   - secrets
   - obfuscate
   - url_parse
-  - with_verbosity
 
 - title: OAuth
   desc: >
