--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,8 @@ Description: httr2 is a modern re-imagining on httr designed around a
 License: MIT + file LICENSE
 URL: https://httr2.r-lib.org, https://github.com/r-lib/httr2
 BugReports: https://github.com/r-lib/httr2/issues
+Depends: 
+    R (>= 3.4)
 Imports: 
     cli (>= 3.0.0),
     curl,
@@ -25,7 +27,6 @@ Imports:
     rlang,
     withr
 Suggests:
-    knitr,
     askpass,
     clipr,
     covr,
@@ -33,17 +34,17 @@ Suggests:
     httpuv,
     jose,
     jsonlite,
+    knitr,
     pkgdown,
     rmarkdown,
     testthat (>= 3.0.0),
     webfakes,
     xml2
+VignetteBuilder: 
+    knitr
+Remotes: 
+    r-lib/pkgdown
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Remotes: 
-    r-lib/pkgdown
-VignetteBuilder: knitr
-Depends: 
-    R (>= 3.4)
