--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(jwt_encode_hmac)
 export(jwt_encode_sig)
 export(last_request)
 export(last_response)
+export(local_mock)
 export(multi_req_perform)
 export(oauth_client)
 export(oauth_client_req_auth_body)
@@ -98,6 +99,7 @@ export(secret_read_rds)
 export(secret_write_rds)
 export(url_build)
 export(url_parse)
+export(with_mock)
 export(with_verbosity)
 import(rlang)
 importFrom(glue,glue)
