--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      HTTR2_KEY: ${{ secrets.HTTR2_KEY }}
     steps:
       - uses: actions/checkout@v2
 
