Tweak placement in index

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -16,11 +16,12 @@ reference:
   - req_url
   - req_user_agent
 
-- subtitle: Debugging
+- subtitle: Debugging/testing
   contents:
   - last_request
   - req_dry_run
   - req_verbose
+  - with_mock
   - with_verbosity
 
 - subtitle: Authentication
@@ -54,7 +55,6 @@ reference:
   - secrets
   - obfuscate
   - url_parse
-  - with_mock
 
 - title: OAuth
   desc: >
