Simplify print obfuscation & obfuscate str()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 S3method("$",httr2_headers)
 S3method("[",httr2_headers)
 S3method("[[",httr2_headers)
-S3method(format,httr2_obfuscated)
 S3method(print,httr2_cmd)
 S3method(print,httr2_headers)
 S3method(print,httr2_oauth_client)
@@ -12,6 +11,7 @@ S3method(print,httr2_request)
 S3method(print,httr2_response)
 S3method(print,httr2_token)
 S3method(print,httr2_url)
+S3method(str,httr2_obfuscated)
 export("%>%")
 export(curl_help)
 export(curl_translate)
