--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,9 @@ Authors@R:
              email = "hadley@rstudio.com"),
       person(given = "RStudio",
              role = c("cph", "fnd")))
-Description: httr2 is a modern re-imagining on httr designed around a
-    pipeable interface and solving more of the problems that API wrappers
-    need.
+Description: httr2 is a modern re-imagining of httr that uses a pipe-based
+    interface and solves more of the problems that API wrapping packages
+    face.
 License: MIT + file LICENSE
 URL: https://httr2.r-lib.org, https://github.com/r-lib/httr2
 BugReports: https://github.com/r-lib/httr2/issues
