--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,8 @@ Authors@R:
              email = "hadley@rstudio.com"),
       person(given = "RStudio",
              role = c("cph", "fnd")))
-Description: httr2 is a modern re-imagining of httr that uses a pipe-based
-    interface and solves more of the problems that API wrapping packages
-    face.
+Description: httr2 is a modern re-imagining of httr that uses a pipe-based 
+    interface and solves more of the problems that API wrapping packages face.
 License: MIT + file LICENSE
 URL: https://httr2.r-lib.org, https://github.com/r-lib/httr2
 BugReports: https://github.com/r-lib/httr2/issues
