--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(last_response)
 export(local_mock)
 export(multi_req_perform)
 export(oauth_client)
+export(oauth_client_req_auth)
 export(oauth_client_req_auth_body)
 export(oauth_client_req_auth_header)
 export(oauth_client_req_auth_jwt_sig)
