Quiet import NOTE
By importing R6

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(url_build)
 export(url_parse)
 export(with_mock)
 export(with_verbosity)
+import(R6)
 import(rlang)
 importFrom(glue,glue)
 importFrom(magrittr,"%>%")
