--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(req_oauth_password)
 export(req_oauth_refresh)
 export(req_options)
 export(req_perform)
+export(req_proxy)
 export(req_retry)
 export(req_stream)
 export(req_template)
