--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,7 +1,12 @@
 url: https://httr2.r-lib.org
 
 template:
-  bootstrap: 4
+  package: tidytemplate
+  bootstrap: 5
+
+  includes:
+    in_header: |
+      <script defer data-domain="httr2.r-lib.org,all.tidyverse.org" src="https://plausible.io/js/plausible.js"></script>
 
 reference:
 - title: Requests
