--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,10 @@
 Package: httr2
 Title: Perform HTTP Requests and Process the Responses
 Version: 0.1.1.9000
-Authors@R: 
-    c(person(given = "Hadley",
-             family = "Wickham",
-             role = c("aut", "cre"),
-             email = "hadley@rstudio.com"),
-      person(given = "RStudio",
-             role = c("cph", "fnd")))
+Authors@R: c(
+    person("Hadley", "Wickham", , "hadley@rstudio.com", role = c("aut", "cre")),
+    person("RStudio", role = c("cph", "fnd"))
+  )
 Description: Tools for creating and modifying HTTP requests, then
     performing them and processing the results. 'httr2' is a modern
     re-imagining of 'httr' that uses a pipe-based interface and solves
@@ -25,7 +22,7 @@ Imports:
     openssl,
     R6,
     rappdirs,
-    rlang,
+    rlang (>= 1.0.0),
     withr
 Suggests:
     askpass,
@@ -44,6 +41,7 @@ Suggests:
     xml2
 VignetteBuilder: 
     knitr
+Config/Needs/website: tidyverse/tidytemplate
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
