Provide throttle_status()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,7 @@ export(secret_has_key)
 export(secret_make_key)
 export(secret_read_rds)
 export(secret_write_rds)
+export(throttle_status)
 export(url_build)
 export(url_parse)
 export(with_mock)
