--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(str,httr2_obfuscated)
 export("%>%")
 export(curl_help)
 export(curl_translate)
+export(example_url)
 export(jwt_claim)
 export(jwt_encode_hmac)
 export(jwt_encode_sig)
@@ -99,7 +100,6 @@ export(secret_has_key)
 export(secret_make_key)
 export(secret_read_rds)
 export(secret_write_rds)
-export(test_server)
 export(throttle_status)
 export(url_build)
 export(url_parse)
