--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,7 @@ export(resp_check_status)
 export(resp_content_type)
 export(resp_date)
 export(resp_encoding)
+export(resp_has_body)
 export(resp_header)
 export(resp_header_exists)
 export(resp_headers)
