--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,4 +109,5 @@ export(with_verbosity)
 import(R6)
 import(rlang)
 importFrom(glue,glue)
+importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
