Add to pkgdown yaml

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -55,6 +55,7 @@ reference:
 - title: Handle the response
   contents:
   - starts_with("resp_")
+  - check_resp_content_type
 
 - title: Miscellaenous helpers
   contents:
