Need the latest curl

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Depends:
     R (>= 3.4)
 Imports: 
     cli (>= 3.0.0),
-    curl,
+    curl (>= 5.0.2),
     glue,
     magrittr,
     openssl,
@@ -46,3 +46,4 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Remotes: jeroen/curl
