--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,8 @@ Title: Perform HTTP Requests and Process the Responses
 Version: 0.2.3.9000
 Authors@R: c(
     person("Hadley", "Wickham", , "hadley@rstudio.com", role = c("aut", "cre")),
-    person("RStudio", role = c("cph", "fnd"))
+    person("RStudio", role = c("cph", "fnd")),
+    person("Maximilian", "Girlich", role = "ctb")
   )
 Description: Tools for creating and modifying HTTP requests, then
     performing them and processing the results. 'httr2' is a modern
