Implement req_progress()
Fixes #20

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ export(req_oauth_password)
 export(req_oauth_refresh)
 export(req_options)
 export(req_perform)
+export(req_progress)
 export(req_proxy)
 export(req_retry)
 export(req_stream)
