--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(oauth_flow_refresh)
 export(oauth_token)
 export(obfuscate)
 export(obfuscated)
+export(paginate_perform)
 export(req_auth_basic)
 export(req_auth_bearer_token)
 export(req_body_file)
@@ -61,6 +62,10 @@ export(req_oauth_device)
 export(req_oauth_password)
 export(req_oauth_refresh)
 export(req_options)
+export(req_paginate)
+export(req_paginate_next_token)
+export(req_paginate_next_url)
+export(req_paginate_offset)
 export(req_perform)
 export(req_progress)
 export(req_proxy)
