Export `in_query()`, `in_header()`, and `in_body()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,9 @@ export("%>%")
 export(curl_help)
 export(curl_translate)
 export(example_url)
+export(in_body)
+export(in_header)
+export(in_query)
 export(jwt_claim)
 export(jwt_encode_hmac)
 export(jwt_encode_sig)
