Get all queries or just one

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -97,6 +97,7 @@ export(resp_status)
 export(resp_status_desc)
 export(resp_url)
 export(resp_url_path)
+export(resp_url_queries)
 export(resp_url_query)
 export(response)
 export(secret_decrypt)
