--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,10 @@ export(resp_raw)
 export(resp_retry_after)
 export(resp_status)
 export(resp_status_desc)
+export(resp_url)
+export(resp_url_path)
+export(resp_url_queries)
+export(resp_url_query)
 export(response)
 export(secret_decrypt)
 export(secret_encrypt)
