--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ S3method(print,httr2_token)
 S3method(print,httr2_url)
 S3method(str,httr2_obfuscated)
 export("%>%")
+export(cache_path)
 export(curl_help)
 export(curl_translate)
 export(example_url)
