--- a/NAMESPACE
+++ b/NAMESPACE
@@ -114,4 +114,5 @@ export(with_verbosity)
 import(R6)
 import(rlang)
 importFrom(glue,glue)
+importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
