--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,7 +49,7 @@ export(req_body_json)
 export(req_body_multipart)
 export(req_body_raw)
 export(req_cache)
-export(req_cookie_file)
+export(req_cookie_preserve)
 export(req_dry_run)
 export(req_error)
 export(req_headers)
