--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,6 @@ S3method(print,httr2_token)
 S3method(print,httr2_url)
 S3method(str,httr2_obfuscated)
 export("%>%")
-export(cache_path)
 export(curl_help)
 export(curl_translate)
 export(example_url)
@@ -24,6 +23,7 @@ export(last_request)
 export(last_response)
 export(local_mock)
 export(multi_req_perform)
+export(oauth_cache_path)
 export(oauth_client)
 export(oauth_client_req_auth)
 export(oauth_client_req_auth_body)
