Add OAuth vignette & cache path customisation (#286)
* Rename cache path helper for `req_cache()`
* Introduce new `oauth_cache_path()` function + env var
* Link to vignette from docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(last_request)
 export(last_response)
 export(local_mock)
 export(multi_req_perform)
+export(oauth_cache_path)
 export(oauth_client)
 export(oauth_client_req_auth)
 export(oauth_client_req_auth_body)
