--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,7 +41,7 @@ export(oauth_flow_refresh)
 export(oauth_token)
 export(obfuscate)
 export(obfuscated)
-export(paginate_perform)
+export(paginate_req_perform)
 export(req_auth_basic)
 export(req_auth_bearer_token)
 export(req_body_file)
