Export `paginate_next_request()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(oauth_flow_refresh)
 export(oauth_token)
 export(obfuscate)
 export(obfuscated)
+export(paginate_next_request)
 export(paginate_req_perform)
 export(req_auth_basic)
 export(req_auth_bearer_token)
