Rename to `req_paginate_token()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,9 +64,9 @@ export(req_oauth_password)
 export(req_oauth_refresh)
 export(req_options)
 export(req_paginate)
-export(req_paginate_next_token)
 export(req_paginate_next_url)
 export(req_paginate_offset)
+export(req_paginate_token)
 export(req_perform)
 export(req_progress)
 export(req_proxy)
