--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,8 @@ export(oauth_flow_refresh)
 export(oauth_token)
 export(obfuscate)
 export(obfuscated)
+export(paginate_next_request)
+export(paginate_req_perform)
 export(req_auth_basic)
 export(req_auth_bearer_token)
 export(req_body_file)
@@ -63,6 +65,10 @@ export(req_oauth_device)
 export(req_oauth_password)
 export(req_oauth_refresh)
 export(req_options)
+export(req_paginate)
+export(req_paginate_next_url)
+export(req_paginate_offset)
+export(req_paginate_token)
 export(req_perform)
 export(req_progress)
 export(req_proxy)
