--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -43,6 +43,7 @@ reference:
   - req_perform
   - req_stream
   - multi_req_perform
+  - paginate_req_perform
 
 - subtitle: Control the process
   desc: >
@@ -53,6 +54,11 @@ reference:
   - req_error
   - req_throttle
   - req_retry
+
+- title: Pagination
+  contents:
+  - req_paginate
+  - paginate_next_request
 
 - title: Handle the response
   contents:
