--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ export(resp_url_path)
 export(resp_url_queries)
 export(resp_url_query)
 export(response)
+export(response_json)
 export(secret_decrypt)
 export(secret_encrypt)
 export(secret_has_key)
