--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(jwt_encode_sig)
 export(last_request)
 export(last_response)
 export(local_mock)
+export(local_mocked_responses)
 export(multi_req_perform)
 export(oauth_cache_path)
 export(oauth_client)
@@ -119,6 +120,7 @@ export(throttle_status)
 export(url_build)
 export(url_parse)
 export(with_mock)
+export(with_mocked_responses)
 export(with_verbosity)
 import(R6)
 import(rlang)
