--- a/NAMESPACE
+++ b/NAMESPACE
@@ -111,7 +111,9 @@ export(resp_url_query)
 export(response)
 export(response_json)
 export(secret_decrypt)
+export(secret_decrypt_file)
 export(secret_encrypt)
+export(secret_encrypt_file)
 export(secret_has_key)
 export(secret_make_key)
 export(secret_read_rds)
