--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,6 @@ S3method(print,httr2_token)
 S3method(print,httr2_url)
 S3method(str,httr2_obfuscated)
 export("%>%")
-export(check_resp_content_type)
 export(curl_help)
 export(curl_translate)
 export(example_url)
@@ -91,6 +90,7 @@ export(resp_body_json)
 export(resp_body_raw)
 export(resp_body_string)
 export(resp_body_xml)
+export(resp_check_content_type)
 export(resp_check_status)
 export(resp_content_type)
 export(resp_date)
