--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(example_url)
 export(jwt_claim)
 export(jwt_encode_hmac)
 export(jwt_encode_sig)
+export(last_pagination_responses)
 export(last_request)
 export(last_response)
 export(local_mock)
@@ -45,6 +46,7 @@ export(obfuscate)
 export(obfuscated)
 export(paginate_next_request)
 export(paginate_req_perform)
+export(paginate_req_perform_continue)
 export(req_auth_basic)
 export(req_auth_bearer_token)
 export(req_body_file)
