--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,13 +13,13 @@ S3method(print,httr2_token)
 S3method(print,httr2_url)
 S3method(str,httr2_obfuscated)
 export("%>%")
-export(chunk_req_perform)
 export(curl_help)
 export(curl_translate)
 export(example_url)
 export(jwt_claim)
 export(jwt_encode_hmac)
 export(jwt_encode_sig)
+export(last_chunked_responses)
 export(last_request)
 export(last_response)
 export(local_mock)
@@ -54,6 +54,7 @@ export(req_body_json)
 export(req_body_multipart)
 export(req_body_raw)
 export(req_cache)
+export(req_chunk)
 export(req_cookie_preserve)
 export(req_dry_run)
 export(req_error)
