Actually export `chunk_req_perform()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ S3method(print,httr2_token)
 S3method(print,httr2_url)
 S3method(str,httr2_obfuscated)
 export("%>%")
+export(chunk_req_perform)
 export(curl_help)
 export(curl_translate)
 export(example_url)
