--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(example_url)
 export(jwt_claim)
 export(jwt_encode_hmac)
 export(jwt_encode_sig)
+export(last_chunk)
 export(last_chunked_responses)
 export(last_request)
 export(last_response)
