Allow custom content type for JSON body (#190)
Fixes #189. Fixes #284.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,7 @@ export(resp_body_json)
 export(resp_body_raw)
 export(resp_body_string)
 export(resp_body_xml)
+export(resp_check_content_type)
 export(resp_check_status)
 export(resp_content_type)
 export(resp_date)
