--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ export(req_options)
 export(req_paginate)
 export(req_paginate_next_url)
 export(req_paginate_offset)
+export(req_paginate_page_index)
 export(req_paginate_token)
 export(req_perform)
 export(req_progress)
