--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,6 @@ S3method(print,httr2_token)
 S3method(print,httr2_url)
 S3method(str,httr2_obfuscated)
 export("%>%")
-export(chunk_next_request)
-export(chunk_req_perform)
 export(curl_help)
 export(curl_translate)
 export(example_url)
@@ -22,11 +20,12 @@ export(jwt_claim)
 export(jwt_encode_hmac)
 export(jwt_encode_sig)
 export(last_chunk)
-export(last_chunked_responses)
+export(last_multi_responses)
 export(last_request)
 export(last_response)
 export(local_mock)
 export(local_mocked_responses)
+export(multi_next_request)
 export(multi_req_perform)
 export(oauth_cache_path)
 export(oauth_client)
@@ -47,7 +46,6 @@ export(oauth_flow_refresh)
 export(oauth_token)
 export(obfuscate)
 export(obfuscated)
-export(paginate_next_request)
 export(req_auth_basic)
 export(req_auth_bearer_token)
 export(req_body_file)
@@ -76,6 +74,7 @@ export(req_paginate_offset)
 export(req_paginate_page_index)
 export(req_paginate_token)
 export(req_perform)
+export(req_perform_multi)
 export(req_progress)
 export(req_proxy)
 export(req_retry)
