--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,6 @@ export(last_request)
 export(last_response)
 export(local_mock)
 export(local_mocked_responses)
-export(multi_next_request)
 export(multi_req_perform)
 export(oauth_cache_path)
 export(oauth_client)
@@ -58,6 +57,7 @@ export(req_dry_run)
 export(req_error)
 export(req_headers)
 export(req_method)
+export(req_next_multi)
 export(req_oauth)
 export(req_oauth_auth_code)
 export(req_oauth_bearer_jwt)
