--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -8,6 +8,9 @@ template:
     in_header: |
       <script defer data-domain="httr2.r-lib.org,all.tidyverse.org" src="https://plausible.io/js/plausible.js"></script>
 
+development:
+  mode: auto
+
 reference:
 - title: Requests
   subtitle: Create and modify
