--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export("%>%")
 export(curl_help)
 export(curl_translate)
 export(default_redirect_uri)
+export(example_github_client)
 export(example_url)
 export(jwt_claim)
 export(jwt_encode_hmac)
