--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,6 @@ S3method(str,httr2_obfuscated)
 export("%>%")
 export(curl_help)
 export(curl_translate)
-export(default_redirect_uri)
 export(example_github_client)
 export(example_url)
 export(jwt_claim)
@@ -42,6 +41,7 @@ export(oauth_flow_client_credentials)
 export(oauth_flow_device)
 export(oauth_flow_password)
 export(oauth_flow_refresh)
+export(oauth_redirect_uri)
 export(oauth_token)
 export(obfuscate)
 export(obfuscated)
