--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -79,8 +79,9 @@ reference:
   desc: >
     These functions implement the low-level components of OAuth.
   contents:
-  - starts_with("oauth_")
   - starts_with("jwt_")
+  - starts_with("oauth_")
+  - -starts_with("req_oauth")
 
 articles:
 - title: Using httr2
