--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,7 +46,6 @@ export(oauth_token)
 export(obfuscate)
 export(obfuscated)
 export(paginate_next_request)
-export(paginate_req_perform)
 export(req_auth_basic)
 export(req_auth_bearer_token)
 export(req_body_file)
@@ -74,6 +73,7 @@ export(req_paginate_offset)
 export(req_paginate_page_index)
 export(req_paginate_token)
 export(req_perform)
+export(req_perform_paginate)
 export(req_progress)
 export(req_proxy)
 export(req_retry)
