--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -44,9 +44,9 @@ reference:
 - title: Perform a request and get a response
   contents:
   - req_perform
+  - req_perform_paginate
   - req_stream
   - multi_req_perform
-  - paginate_req_perform
 
 - subtitle: Control the process
   desc: >
