--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -44,7 +44,7 @@ reference:
 - title: Perform a request and get a response
   contents:
   - req_perform
-  - req_perform_multi
+  - req_perform_parallel
   - req_stream
 
 - subtitle: Control the process
@@ -60,7 +60,7 @@ reference:
 - title: Pagination
   contents:
   - req_paginate
-  - req_perform_paginate
+  - req_perform_iterate
 
 - title: Handle the response
   contents:
