--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,8 +73,8 @@ export(req_paginate_offset)
 export(req_paginate_page_index)
 export(req_paginate_token)
 export(req_perform)
-export(req_perform_multi)
-export(req_perform_paginate)
+export(req_perform_iterate)
+export(req_perform_parallel)
 export(req_progress)
 export(req_proxy)
 export(req_retry)
