--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(curl_translate)
 export(default_redirect_uri)
 export(example_github_client)
 export(example_url)
+export(iterate_next_request)
 export(jwt_claim)
 export(jwt_encode_hmac)
 export(jwt_encode_sig)
@@ -45,7 +46,6 @@ export(oauth_flow_refresh)
 export(oauth_token)
 export(obfuscate)
 export(obfuscated)
-export(paginate_next_request)
 export(req_auth_basic)
 export(req_auth_bearer_token)
 export(req_body_file)
