Replace req_stream with req_perform_stream
And move to own file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ export(req_paginate_token)
 export(req_perform)
 export(req_perform_iterate)
 export(req_perform_parallel)
+export(req_perform_stream)
 export(req_progress)
 export(req_proxy)
 export(req_retry)
