--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,7 +73,7 @@ export(req_paginate_offset)
 export(req_paginate_page_index)
 export(req_paginate_token)
 export(req_perform)
-export(req_perform_iterate)
+export(req_perform_iteratively)
 export(req_perform_parallel)
 export(req_perform_stream)
 export(req_progress)
