--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(oauth_flow_password)
 export(oauth_flow_refresh)
 export(oauth_redirect_uri)
 export(oauth_token)
+export(oauth_token_cached)
 export(obfuscate)
 export(obfuscated)
 export(req_auth_basic)
