Implement new iteration strategy
A first pass. Fixes #341. Fixes #298.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,9 @@ export(curl_help)
 export(curl_translate)
 export(example_github_client)
 export(example_url)
-export(iterate_next_request)
+export(iterate_with_cursor)
+export(iterate_with_link_url)
+export(iterate_with_offset)
 export(jwt_claim)
 export(jwt_encode_hmac)
 export(jwt_encode_sig)
@@ -68,11 +70,6 @@ export(req_oauth_device)
 export(req_oauth_password)
 export(req_oauth_refresh)
 export(req_options)
-export(req_paginate)
-export(req_paginate_next_url)
-export(req_paginate_offset)
-export(req_paginate_page_index)
-export(req_paginate_token)
 export(req_perform)
 export(req_perform_iteratively)
 export(req_perform_parallel)
@@ -117,6 +114,9 @@ export(resp_url_queries)
 export(resp_url_query)
 export(response)
 export(response_json)
+export(resps_combine)
+export(resps_errors)
+export(resps_responses)
 export(secret_decrypt)
 export(secret_decrypt_file)
 export(secret_encrypt)
