Add to parallel; test helpers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -114,9 +114,10 @@ export(resp_url_queries)
 export(resp_url_query)
 export(response)
 export(response_json)
-export(resps_combine)
-export(resps_errors)
-export(resps_responses)
+export(resps_data)
+export(resps_failures)
+export(resps_requests)
+export(resps_successes)
 export(secret_decrypt)
 export(secret_decrypt_file)
 export(secret_encrypt)
